@@ -112,6 +112,7 @@ Abbreviated Changelog from 2.4.1 Final
 - Updated the Apache Axis packages to 1.5.1
 - Upgraded to Rome 0.9 (RSS libraries)
 - Made it possible to state contentId instead of propertyName for tag content:assetThumbnailUrl.
+- Fixed bug in access control when protecting which users are allowed to create sitenodes under a sitenode. It behaves correct now.
 
 -------------------------------------------------------------------------------------
 - InfoGlue 2.4.1 Final
